<resources>
    <string name="fb_app_id">208459577239282</string>
    <string name="app_name">Cash My Salary</string>
    <string name="btn_eng_text">English</string>
    <string name="btn_next_text">Next</string>
    <string name="btn_submit_text">Submit</string>
    <string name="btn_got_it">Got it</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_hindi_text">हिन्दी</string>
    <string name="btn_login_text">Login</string>
    <string name="confirmation">Exit Alert</string>
    <string name="are_you_sure">Are you sure want to exit ?</string>
    <string name="btn_verify_text">Verify</string>
    <string name="btn_verify_only_text">Verify</string>
    <string name="otp_verification_text">OTP Verification</string>
    <string name="btn_lets_go_text">Allow Permissions</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="txt_referral_code">Yes, I have a referral code!</string>
    <string name="tv_connect_with">-----------  Or connect using  -----------</string>
    <string name="next">NEXT</string>
    <string name="did_not_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">SKIP</string>
    <string name="start">Get Started</string>
    <string name="loan_amount">Loan Amount?</string>
    <string name="loan_amount1">Loan Amount</string>
    <string name="loan_amount_header">Repayment Amount</string>
    <string name="loan_date_header">Repayment Date</string>
    <string name="loan_tenure">Loan Tenure?</string>
    <string name="loan_repayment">Repayment</string>
    <string name="loan_amount_applied">Loan Amount Applied</string>
    <string name="tenure">Tenure</string>
    <string name="loan_payment_date">Payment Date</string>
    <string name="loan_month">Tenure Month</string>
    <string name="loan_month_txt">2</string>
    <string name="loan_payment_date_txt">25-05-2025</string>
    <string name="loan_processing">Processing Fee</string>
    <string name="loan_overdue">Overdue Days</string>
    <string name="loan_disbursal">Disbursal Amount</string>
    <string name="loan_processing_amt">₹ 3000</string>
    <string name="rs">₹</string>
    <string name="loan_disbursal_amt">₹ 27000</string>
    <string name="loan_interest">Interest (per month)</string>
    <string name="loan_gst_processing">GST 18% on Processing Fee</string>
    <string name="total_processing">Total Processing Fee</string>
    <string name="total_repayment">Total Repayment Amount</string>
    <string name="submit_apeal">Submit An Appeal</string>
    <string name="repayment_not_updated">Repayment Not Updated?</string>
    <string name="total_processing_amt">₹ 3540</string>
    <string name="loan_gst_processing_amt">₹ 540</string>
    <string name="loan_interest_txt">3%</string>
    <string name="loan_tenure_txt">30 days</string>
    <string name="loan_amount_txt">₹ 30000</string>
    <string name="loan_id_txt">Loan ID: LJD2000125</string>
    <string name="loan_id_heading">Loan ID:</string>
    <string name="loan_amt_heading">Loan</string>
    <string name="amount_due">Amount</string>
    <string name="amount_due1">Due</string>
    <string name="payment_amount_heading">Payment</string>
    <string name="payment_date">Date</string>
    <string name="loan_amt_heading1">Amount</string>
    <string name="repayment_amt_heading">Payable on</string>
    <string name="paid_on_due_date_heading">Paid on</string>
    <string name="repayment_amt_heading1">Due Date</string>
    <string name="repayment_date_heading">Due Date</string>
    <string name="due_today_heading">Due If</string>
    <string name="due_today_heading1">Paid Today</string>
    <string name="repayment_amount">Repayment</string>
    <string name="due_amount">Due</string>
    <string name="loan_id">LJD2000125</string>
    <string name="loan_status">Approved</string>
    <string name="loan_repayemt_txt">₹ 35340</string>
    <string name="slide_1_desc">Now getting a loan is at your fingertips</string>
    <string name="btn_generate_otp_text">Get OTP</string>
    <string name="btn_apply_text">Apply</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_apply_now_text">Apply Now</string>
    <string name="btn_upload_text">Upload</string>
    <string name="btn_repayment_text">Repayment</string>
    <string name="btn_regenerate_otp_text">Resend OTP</string>
    <string name="btn_pay_text">Pay now</string>
    <string name="generate_noc">Generate NOC</string>
    <string name="apply_again_txt">Apply again</string>
    <string name="slide_2_desc">Get instant loan approval &amp; disbursal</string>
    <string name="slide_3_desc">No paperwork</string>
    <string name="accept_text">I agree to CashmySalary\'s <a href="https://www.google.com/"><font color='#dd1f25'>Terms and Conditions</font></a> of the loan application</string>
    <string name="authorize_text">I authorize CashmySalary to pull my credit report</string>
    <string name="et_phone_hint">Mobile Number</string>
    <string name="et_password_hint">Enter OTP</string>
    <string name="et_pass_hint">Password</string>
    <string name="et_referral_hint">Referral Code (optional)</string>
    <string name="sign_in_with_google">Google</string>
    <string name="sign_in_with_fb">Facebook</string>
    <string name="today">Today</string>
    <string name="payment_due_heading">Payment Due</string>
    <string name="payment_amount">Payment Amount :</string>
    <string name="select_payment">Select a payment method</string>
    <string name="how_much_cash">Loan Amount:</string>
    <string name="select_language">Select your language</string>
    <string name="instant_loan_txt">Instant Loan for</string>
    <string name="instant_loan_txt1">Salaried + Self Employed</string>
    <string name="applied_loan_success">Application submitted successful</string>
    <string name="your_loan">Your Loan</string>
    <string name="credit_note">We can help you build a better credit history and enhance your chances of getting a loan with higher limits</string>
    <string name="welcome2_txt1">Seamless and easy application process</string>
    <string name="welcome2_txt2">No paperwork</string>
    <string name="welcome3_txt1">Loan Sanctioned in minutes</string>
    <string name="welcome3_txt2">Disbursed in your account in</string>
    <string name="welcome3_txt3">30 Minutes</string>
    <string name="permission_act_toolbar_title">Permission</string>
    <string name="pesonal_act_toolbar_title">Personal Information</string>
    <string name="residence_act_toolbar_title">Residence Information</string>
    <string name="edit_profile_act_toolbar_title">Edit Profile</string>
    <string name="calculator_act_toolbar_title">Apply for a Instant Personal Loan</string>
    <string name="status_act_toolbar_title">Application Status</string>
    <string name="existing_loan_toolbar_title">Supporting Additional Information</string>
    <string name="additional_info_toolbar_title">Additional Information</string>
    <string name="employment_info_toolbar_title">Employment Information</string>
    <string name="work_toolbar_title">Work Address</string>
    <string name="bank_detail_toolbar_title">Salary Account Details</string>
    <string name="apply_result_toolbar_title">Apply Result</string>
    <string name="loan_detail_toolbar_title">Your Loan is Approved</string>
    <string name="loan_agreement_toolbar_title">Loan Agreement</string>
    <string name="congratulation_toolbar_title">Instant Loan</string>
    <string name="e_mandate_toolbar_title">Bank details for Loan Disbursal</string>
    <string name="bank_details_heading">Bank Details</string>
    <string name="face_recognition_toolbar_title">Face Certification</string>
    <string name="reference_act_toolbar_title">Reference Detail</string>
    <string name="kyc_act_toolbar_title">KYC Documents</string>
    <string name="loan_record_toolbar_title">Loan History</string>
    <string name="notification_toolbar_title">Notification</string>
    <string name="application_summary_toolbar_title">My Application Summary</string>
    <string name="offers_toolbar_title">Special Offers</string>
    <string name="contact_us_toolbar_title">Contact Us</string>
    <string name="submit_appeal_toolbar_title">Submit An Appeal</string>
    <string name="upload_receipt_toolbar_title">Upload Repayment Receipt</string>
    <string name="application_status_toolbar_title">Application Status</string>
    <string name="loan_record_detail_toolbar_title">Loan Record Detail</string>
    <string name="invite_friend_toolbar_title">Invite a Friend</string>
    <string name="profile_act_toolbar_title">Profile</string>
    <string name="enter_otp_text">Enter the OTP code sent to your mobile number</string>
    <string name="mobile_number_verified_text">Your mobile number has been updated successfully!</string>
    <string name="enter_number_text">Enter your registered mobile number, or the number with which you would like to register with us</string>
    <string name="enter_number_text2">Enter your registered mobile number</string>
    <string name="permission_content">To assess your eligibility and facilitate faster disbursal of your loan, we need permissions to access your Camera, Contacts, Location, Phone, Storage and SMS.</string>
    <string name="home_text">Home</string>
    <string name="getloan_text">Get Loan</string>
    <string name="my_loan_text">My Loan</string>
    <string name="profile_text">Profile</string>
    <string name="profile_edit">View &amp; Edit Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_document">My Document</string>
    <string name="menu_loan">Loan History</string>
    <string name="menu_app_status">Application Status</string>
    <string name="menu_language">Change Language / भाषा बदलें</string>
    <string name="menu_terms">T&amp;C / Privacy policy</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contactUs">Contact Us</string>
    <string name="menu_logOut">Log out</string>
    <string name="header_gender">Gender <font color='#dd1f25'>*</font></string>
    <string name="header_marital">Marital Status <font color='#dd1f25'>*</font></string>
    <string name="hint_first_name">First name</string>
    <string name="hint_middle_name">Middle name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_pin">PIN code</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="select_city">Select city</string>
    <string name="select_state">Select state</string>
    <string name="header_basic_info">Enter your basic information</string>
    <string name="office_address_header">Add your office address</string>
    <string name="hint_building_no">Building No</string>
    <string name="hint_locality">Locality / Area Name</string>
    <string name="hint_landmark">Landmark (Optional)</string>
    <string name="header_residence_type">Tell us about your residence type</string>
    <string name="select_residence_type">Select Your Type of Residence</string>
    <string name="rb_owned_self">Owned by self/spouse</string>
    <string name="rb_rented_with_family">Rented-With Family</string>
    <string name="rb_rented_staying_alone">Rented-Staying alone</string>
    <string name="rb_hostel">Hostel</string>
    <string name="rb_owned_by_parent">Owned by parent/sibling</string>
    <string name="rb_rented_with_friends">Rented - With Friends</string>
    <string name="rb_paying_guest">Paying guest</string>
    <string name="rb_company_provided">Company provided</string>
</resources>